# tavern_assessment

./: .gitignore  METHODS.md  README.md  main.py  pyproject.toml
data/: full_dataset.csv
notebooks/: explore_data.ipynb
src/: assessment_utilities.py
