[project]
name = "tavern-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sentence-transformers>=5.2.0",
    "statsmodels>=0.14.6",
    "transformers>=4.20.0",
    "torch>=1.10.0",
    "requests>=2.25.0",
    "xgboost>=1.5.0",
    "scikit-optimize>=0.10.2",
]
